@@ -177,5 +177,6 @@ shady-skin Revision History
 
 2015-05-31:
 
-- Increased possible count of displayed lastrecordings to seven 
+- Increased possible count of displayed lastrecordings to seven
+- Added plug-setup-skinpreview.xml
 
